Closed
Bug 232771
Opened 22 years ago
Closed 22 years ago
Typo in definition of GTK_MOZ_EMBED_CLASS
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: crispin, Assigned: crispin)
Details
Attachments
(1 file)
|
1.07 KB,
patch
|
blizzard
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20040130 Galeon/1.3.12
The #define for the GTK_MOZ_EMBED_CLASS has a typo in it, it should say
GTK_CHECK_CLASS_CAST rather than GTK_CHEK_CLASS_CAST
Reproducible: Always
Steps to Reproduce:
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #140331 -
Flags: superreview?(bryner)
Attachment #140331 -
Flags: review?(blizzard)
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•22 years ago
|
||
Comment on attachment 140331 [details] [diff] [review]
patch to correct typo
r/sr=blizzard
No brainer.
Attachment #140331 -
Flags: superreview?(bryner)
Attachment #140331 -
Flags: superreview+
Attachment #140331 -
Flags: review?(blizzard)
Attachment #140331 -
Flags: review+
Updated•22 years ago
|
Assignee: blizzard → mozilla
Comment 3•22 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•