Bug 232771  Typo in definition of GTK_MOZ_EMBED_CLASS patch by Crispin Flowerday <mozilla@flowerday.cx> r+sr=blizzard